@@ -21,6 +21,9 @@ public:
     void tagStatusCommand(CallOrComplete invoc);
     void tagStatus(Monitor* monitor, Output output);
 
+    int cycleValueCommand(Input input, Output output);
+    void cycleValueCompletion(Completion& complete);
+
     void jumptoCommand(CallOrComplete invoc);
 
     void bringCommand(CallOrComplete invoc);
