@@ -136,8 +136,8 @@ unique_ptr<CommandTable> commands(shared_ptr<Root> root) {
                                        &Settings::get_complete }},
         {"toggle",         { settings, &Settings::toggle_cmd,
                                        &Settings::toggle_complete}},
-        {"cycle_value",    { settings, &Settings::cycle_value_cmd,
-                                       &Settings::cycle_value_complete}},
+        {"cycle_value",    { global_cmds, &GlobalCommands::cycleValueCommand,
+                                          &GlobalCommands::cycleValueCompletion}},
         {"cycle_monitor",  { monitors, &MonitorManager::cycleCommand }},
         {"focus_monitor",  { monitors, &MonitorManager::focusCommand }},
         {"add",            BIND_OBJECT(tags, tag_add_command) },
